--- a/mi_app/static/CSS/signup.css
+++ b/mi_app/static/CSS/signup.css
@@ -296,3 +296,29 @@ label {
     text-decoration: underline;
 
 }
+
+@media (max-width: 500px) {
+  .container,
+  .container-login {
+    flex-direction: column; /* Cambia a columna: imagen arriba */
+    width: 95%;
+    margin: 120px auto 0 auto;
+    min-width: unset;
+    margin-top: 40%;
+  }
+  .image-section {
+    width: 100%;
+    min-height: 180px;
+    border-radius: 20px 20px 0 0;
+    padding: 10px 0;
+  }
+  .image-section img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: contain;
+  }
+  .form-section {
+    width: 100%;
+    padding: 20px 10px;
+  }
+}
