--- a/mi_app/static/CSS/perfil.css
+++ b/mi_app/static/CSS/perfil.css
@@ -398,17 +398,17 @@ button {
 
 .Panel {
     width: 30%;
-    padding: 10px;
+    padding: 30px;
     background: #ff58e6;
     color: white;
     border: none;
     border-radius: 30px;
-    font-size: 1em;
     cursor: pointer;
     transition: background 0.3s ease;
     margin: auto;
     font-weight: bolder;
     font-size: 1.4em;
+    text-decoration: none;
   }
   
   .Panel:hover {
