--- a/mi_app/templates/servicios/cirugia.html
+++ b/mi_app/templates/servicios/cirugia.html
@@ -12,25 +12,33 @@
   <p>Línea de urgencias 24/7</p>
 </div>
 
-<!--************************* Cabecera ******************************-->
-
+<!--************************* Cabecera ************************* *****-->
+<div id="urgencias">
+    <p>Línea de urgencias 24/7</p>
+</div>
 <header id="Header">
-  <img src="../../static/img/LogoMotas.png" class="logo">
+    <img src="../static/img/LogoMotas.png" class="logo">
 
-  <input type="checkbox" id="menu">
-  <label for="menu">
-    <img src="img/menu.png" class="menu-ico" alt="Menú">
-  </label>
+    <input type="checkbox" id="menu">
+    <label for="menu">
+        <img src="../static/img/menu.png" class="menu-ico" alt="Menú" />
+    </label>
 
-  <ul class="menu">
-    <li class="item"><a href="{% url 'index' %}">Inicio</a></li>
-    <li class="item"><a href="{% url 'nosotros' %}">Nosotros</a></li>
-    <li class="item"><a href="{% url 'servicios' %}">Servicios</a></li>
-    <li class="item"><a href="{% url 'adopta' %}">Adopta</a></li>
-    <li class="item" id="contactanos-btn">Contáctanos</li>
-    <li class="btn" id="iniciar-sesion-btn">Inicia Sesión</li>
-</ul>
+    <ul class="menu">
+        <li class="item"><a href="{% url 'index' %}">Inicio</a></li>
+        <li class="item"><a href="{% url 'nosotros' %}">Nosotros</a></li>
+        <li class="item"><a href="{% url 'servicios' %}">Servicios</a></li>
+        <li class="item"><a href="{% url 'adopta' %}">Adopta</a></li>
+        <li class="item" id="contactanos-btn">Contáctanos</li>
+        {% if user.is_authenticated %}
+            <li class="item"><a href="{% url 'perfil' %}">Mi Perfil</a></li>
+        {% else %}
+            <li class="item"><a href="{% url 'signin' %}">Inicia Sesion</a></li>
+            <li class="item"><a href="{% url 'signup' %}">registro</a></li>
+        {% endif %}
+    </ul>
 </header>
+
 <!--***************************** modal login **********************************-->
 <div id="loginModal" class="modal-login">
   <div class="modal-logincontent">
@@ -245,7 +253,22 @@
   <p>&copy; Motas 2025 © Medellín, Colombia</p>
   <p>Diseño y desarrollo por M. X. V. © 2025</p>
 </footer>
+<script>
+document.getElementById('btn-whatsapp-modal').onclick = function() {
+    window.open('https://wa.me/573113020495', '_blank');
+};
 
+document.getElementById('btn-agenda-modal').onclick = function() {
+    // Cambia 'ir-a-citas' por el id real de tu botón de agendar si es diferente
+    var agendarBtn = document.getElementById('ir-a-citas') || document.getElementById('abrir-modal-cita');
+    if (agendarBtn) {
+        agendarBtn.click();
+    } else {
+        // Si no hay botón, puedes redirigir a la página de citas
+        window.location.href = '/citas/';
+    }
+};
+</script>
 <script src="../../static/js/servicios.js"></script>
 </body>
 </html>
